--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -5,7 +5,7 @@ RUN mkdir -p /app
 
 WORKDIR /app
 
-COPY Gestion-Horarios-UAM-Backend/requirements.txt .
+COPY ./requirements.txt .
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
@@ -14,4 +14,4 @@ COPY . /app
 
 EXPOSE 8000
 
-CMD [ "uvicorn", "main:app", "--host", "gestion_horarios", "--reload" ]
+CMD [ "uvicorn", "src.main:app", "--host", "gestion_horarios-back", "--reload" ]
