--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pydantic_core==2.16.3
 PyJWT==2.8.0
 PyMySQL==1.1.0
 python-jose==3.3.0
+python-multipart==0.0.9
 rsa==4.9
 six==1.16.0
 sniffio==1.3.1
