Permisos academic y en sus rutas

--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,5 @@ JWT_SECRET=""
 JWT_ALG="HS256"
 
 #Scrapping
-UAM_USER=martin.ostiosa
-UAM_PASSWORD=pepito123
+UAM_USER=juliana.velozac
+UAM_PASSWORD=Juli2005
